# facecook

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
crates/chat-service/: Cargo.toml
crates/chat-service/src/: main.rs
crates/chat-service/src/api/: routes.rs
crates/chat-service/src/domain/: events.rs  models.rs
crates/chat-service/src/repository/: message_repo.rs  mod.rs
crates/chat-service/src/service/: chat_service.rs
crates/chat-service/src/workers/: mod.rs  presence_subscriber.rs
crates/feed-service/: Cargo.toml
crates/feed-service/src/: main.rs
crates/feed-service/src/api/: routes.rs
crates/feed-service/src/domain/: events.rs  models.rs
crates/feed-service/src/repository/: feed_repo.rs  mod.rs
crates/feed-service/src/service/: fanout_service.rs  feed_service.rs  mod.rs
crates/feed-service/src/workers/: fanout_worker.rs  mod.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs  router.rs
crates/gateway/src/middleware/: auth.rs  rate_limit.rs  tracing.rs
crates/post-service/: Cargo.toml
crates/post-service/src/: main.rs
crates/post-service/src/api/: routes.rs
crates/post-service/src/domain/: events.rs  models.rs
crates/post-service/src/repository/: mod.rs  post_repo.rs
crates/post-service/src/service/: post_service.rs
crates/presence-service/: Cargo.toml
crates/presence-service/src/: main.rs
crates/presence-service/src/api/: routes.rs
crates/presence-service/src/domain/: models.rs
crates/presence-service/src/service/: mod.rs  presence_service.rs
crates/shared/: Cargo.toml
crates/shared/src/: auth.rs  cache.rs  config.rs  db.rs  errors.rs  kafka.rs  lib.rs  observability.rs
crates/shared/src/models/: feed.rs  message.rs  mod.rs  post.rs  user.rs
crates/user-service/: Cargo.toml
crates/user-service/src/: main.rs
crates/user-service/src/api/: routes.rs
crates/user-service/src/domain/: events.rs  models.rs
crates/user-service/src/repository/: user_repo.rs
crates/user-service/src/service/: user_service.rs
docs/: 12factor.md  API.md  Architecture.md  DataModel.md  Decisions.md  Realtime.md  Scaling.md
infra/prometheus/: prometheus.yml
migrations/: 001_create_extensions.sql  002_create_users.sql  003_create_follows.sql  004_create_posts.sql  005_create_feed.sql  006_create_chat.sql  007_add_missing_post_columns.sql
ui/: .env.development  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/feed/: PostCard.tsx
ui/src/components/layout/: AppShell.tsx  Sidebar.tsx
ui/src/hooks/: useChat.ts  useFeed.ts  usePresence.ts
ui/src/lib/: api.ts  queryKeys.ts  utils.ts
ui/src/pages/: AuthPage.tsx  ChatPage.tsx  FeedPage.tsx  ProfilePage.tsx
ui/src/stores/: auth.ts
ui/src/types/: api.ts  ws.ts
