[package]
name = "feed-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "feed-service"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
deadpool-redis = { workspace = true }
redis = { workspace = true }
rdkafka = { workspace = true }
